@@ -1,3 +1,8 @@
+2010-08-23  Tom Tromey  <tromey@redhat.com>
+
+	PR python/11915:
+	* gdb.texinfo (Types In Python): Document array method.
+
 2010-08-18  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* gdb.texinfo (PowerPC Embedded): Mention support for the DVC register.
